Torre de Hanoi (Animação)

--- a/01 - Recursao/apresentacao.tex
+++ b/01 - Recursao/apresentacao.tex
@@ -185,6 +185,22 @@
   \end{columns}
 \end{frame}
 
+\begin{frame}[t]
+  \frametitle{Torre de Hanoi}
+  Objetivo: Mover os blocos da base 1 para a base 3, utilizando, caso necessário, a torre central.\footnote{Fonte da animação: https://texample.net/tikz/examples/towers-of-hanoi/}
+
+  Única regra: Um bloco maior não pode ficar em cima de um bloco menor.
+  \begin{figure}[h]
+    \begin{center}
+      \includegraphics[width=12cm]{./fig/hanoi.png}
+    \end{center}
+  \end{figure}
+\end{frame}
+
+\hanoi{1}
+\hanoi{2}
+\hanoi{3}
+
 \begin{frame}
   \frametitle{Exemplo: Formação de sequências}
   Funções recursivas são comumente utilizadas para geração de sequências. Exemplo:
