--- a/01 - Recursao/apresentacao.tex
+++ b/01 - Recursao/apresentacao.tex
@@ -206,8 +206,8 @@
   MOVER(N, ORIGEM, DESTINO, AUXILIAR)
   \begin{itemize}\itemsep1em 
     \item<2->Passo 1: MOVER(N-1, ORIGEM, AUXILIAR, DESTINO)
-    \item<3->Passo 2: MOVER(1, ORIGEM, DESTINO, AUXILIAR)
-    \item<4->Passo 3: MOVER(n-1, AUXILIAR, DESTINO, ORIGEM)
+    \item<3->Passo 2: MOVER O DISCO DA \textbf{ORIGEM} PARA O \textbf{DESTINO}
+    \item<4->Passo 3: MOVER(N-1, AUXILIAR, DESTINO, ORIGEM)
   \end{itemize}
 
   \vfill
@@ -220,6 +220,7 @@
 \end{frame}
 
 \hanoi{4}
+% \hanoi{6}
 
 
 \begin{frame}
