--- a/01 - Recursao/apresentacao.tex
+++ b/01 - Recursao/apresentacao.tex
@@ -8,6 +8,7 @@
 \usepackage{lmodern}
 \usepackage{listings}
 \usepackage{xcolor}
+\usepackage{dirtree}
 \input{torreHanoi.tex}
 \definecolor{commentgreen}{RGB}{2,112,10}
 \definecolor{eminence}{RGB}{108,48,130}
@@ -143,13 +144,31 @@
   \frametitle{Cálculo de uma potência}
   Calcula a potência com um expoente inteiro de um número em ponto flutuante.
   \begin{equation*}
-    x^n=\begin{cases}
+    pot(x,n)=x^n=\begin{cases}
       1,                & \text{se}\ n=0.        \\
       \frac{1}{x^{-n}}, & \text{se}\ n<0.        \\
       x(x^{n-1}),       & \text{caso contrário}.
     \end{cases}
   \end{equation*}
-
+  \begin{columns}[t]
+    \begin{column}{0.5\textwidth}
+      \dirtree{%
+        .1 pot(2,-3).
+        .2 1/pot(2,3).
+        .3 2*pot(2,2).
+        .4 2*pot(2,1).
+        .5 2*pot(2,0).
+        .6 1.
+        .5 2.
+        .4 4.
+        .3 8.
+        .2 0.125.
+      }
+    \end{column}
+    \begin{column}{0.5\textwidth}
+      A recursão pode ser observada em um formato de árvore em que cada chamada recursiva abre um novo espaço de processamento.
+    \end{column}
+  \end{columns}
 \end{frame}
 
 \begin{frame}
@@ -185,42 +204,86 @@
   \end{columns}
 \end{frame}
 
+% Definindo cores para os discos
+\definecolor{disco1color}{RGB}{255,0,0}     % Vermelho
+\definecolor{disco2color}{RGB}{0,255,0}     % Verde
+\definecolor{disco3color}{RGB}{0,0,255}     % Azul
+\definecolor{disco4color}{RGB}{255,255,0}   % Amarelo
+\definecolor{disco5color}{RGB}{255,128,0}   % Laranja
+
+\tikzset{
+  disco/.style 2 args={draw, thick, minimum width=#1, minimum height=0.5cm, fill=#2, rounded corners=0.1cm},  pilar/.style={draw, thick, minimum width=0.2cm, minimum height=4cm, fill=black!30, rounded corners=0.1cm},
+  nome/.style={below}}
 \begin{frame}[t]
   \frametitle{Torre de Hanoi}
   Objetivo: Mover os blocos da base 1 para a base 3, utilizando, caso necessário, a torre central.\footnote{Fonte da animação: https://texample.net/tikz/examples/towers-of-hanoi/}
 
   Única regra: Um bloco maior não pode ficar em cima de um bloco menor.
-  \begin{figure}[h]
-    \begin{center}
-      \includegraphics[width=12cm]{./fig/hanoi.png}
-    \end{center}
-  \end{figure}
+  \vfill
+  \begin{center}
+
+    \begin{tikzpicture}
+
+      % Desenhando os pilares
+      \node[pilar] (pilar1) at (-4,0) {};
+      \node[pilar] (pilar2) at (0,0) {};
+      \node[pilar] (pilar3) at (4,0) {};
+
+      \node[nome] at (pilar1.south) {\large Origem};
+      \node[nome] at (pilar2.south) {\large Auxiliar};
+      \node[nome] at (pilar3.south) {\large Destino};
+
+      % Desenhando os discos
+      \node[disco={2.5cm}{disco1color}] (disco1) at (pilar1.south) [above] {};
+      \node[disco={2cm}{disco2color}] (disco2) at (disco1.north) [above] {};
+      \node[disco={1.5cm}{disco3color}] (disco3) at (disco2.north) [above] {};
+      \node[disco={1cm}{disco4color}] (disco4) at (disco3.north) [above] {};
+      \node[disco={0.5cm}{disco5color}] (disco5) at (disco4.north) [above] {};
+
+    \end{tikzpicture}
+  \end{center}
 \end{frame}
 
-\hanoi{1}
-\hanoi{2}
-\hanoi{3}
+% \hanoi{1}
+% \hanoi{2}
+% \hanoi{3}
 
 \begin{frame}
   \frametitle{Torre de Hanoi (Algoritmo) - $N>1$}
   MOVER(N, ORIGEM, DESTINO, AUXILIAR)
-  \begin{itemize}\itemsep1em 
+  \begin{itemize}\itemsep1em
     \item<2->Passo 1: MOVER(N-1, ORIGEM, AUXILIAR, DESTINO)
     \item<3->Passo 2: MOVER O DISCO DA \textbf{ORIGEM} PARA O \textbf{DESTINO}
     \item<4->Passo 3: MOVER(N-1, AUXILIAR, DESTINO, ORIGEM)
   \end{itemize}
 
   \vfill
-  \begin{figure}[h]
-    \begin{center}
-      \includegraphics[width=8cm]{./fig/hanoi.png}
-    \end{center}
-  \end{figure}
-  
+  \begin{center}
+
+    \begin{tikzpicture}
+
+      % Desenhando os pilares
+      \node[pilar] (pilar1) at (-4,0) {};
+      \node[pilar] (pilar2) at (0,0) {};
+      \node[pilar] (pilar3) at (4,0) {};
+
+      \node[nome] at (pilar1.south) {\large Origem};
+      \node[nome] at (pilar2.south) {\large Auxiliar};
+      \node[nome] at (pilar3.south) {\large Destino};
+
+      % Desenhando os discos
+      \node[disco={2.5cm}{disco1color}] (disco1) at (pilar1.south) [above] {};
+      \node[disco={2cm}{disco2color}] (disco2) at (disco1.north) [above] {};
+      \node[disco={1.5cm}{disco3color}] (disco3) at (disco2.north) [above] {};
+      \node[disco={1cm}{disco4color}] (disco4) at (disco3.north) [above] {};
+      \node[disco={0.5cm}{disco5color}] (disco5) at (disco4.north) [above] {};
+
+    \end{tikzpicture}
+  \end{center}
+
 \end{frame}
 
-\hanoi{4}
-% \hanoi{6}
+% \hanoi{4}
 
 
 \begin{frame}
@@ -443,9 +506,9 @@
 \begin{frame}
   \frametitle{Recursão indireta}
   \begin{align*}
-    \begin{cases}sen(x) &= sen\left(\frac{x}{3}\right) \frac{\left(3-tan^2\left(\frac{x}{3}\right)\right)}{\left(1+tan^2\left(\frac{x}{3}\right)\right)}\\
-    tan(x) &= \frac{sen(x)}{cos(x)} \\
-    cos(x) &= 1 - sen(\frac{x}{2})
+    \begin{cases}sen(x) & = sen\left(\frac{x}{3}\right) \frac{\left(3-tan^2\left(\frac{x}{3}\right)\right)}{\left(1+tan^2\left(\frac{x}{3}\right)\right)} \\
+             tan(x) & = \frac{sen(x)}{cos(x)}                                                                                                         \\
+             cos(x) & = 1 - sen(\frac{x}{2})
     \end{cases}
   \end{align*}
 
@@ -497,8 +560,8 @@
   \pause  Exemplo 2: (Função de Ackerman)
   \begin{equation*}
     A(m,n)=\begin{cases}
-      $m+1$,               & \text{se $n=0$}.       \\
-      $A(n-1, 1)$          & \text{se $n>4\ e\ m=0$}  \\
+      $m+1$,               & \text{se $n=0$}.        \\
+      $A(n-1, 1)$          & \text{se $n>4\ e\ m=0$} \\
       $A(n-1, A(n, m-1))$, & \text{Caso contrário}.
     \end{cases}
   \end{equation*}
@@ -510,8 +573,8 @@
     \item Escreva uma função recursiva para adicionar os primeiros $n$ termos da série:
           $$ 1 + \frac{1}{2} - \frac{1}{3} + \frac{1}{4} - \frac{1}{5} + \ldots$$
     \item Apresente uma versão recursiva da função:
-    
-    \codecpp[0.6]{algoritmos/alg08.c}{Função cubo}
+
+          \codecpp[0.6]{algoritmos/alg08.c}{Função cubo}
   \end{enumerate}
 \end{frame}
 
